# RKO_Python

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements_docs.txt
.github/workflows/: deploy.yml
Problems/KnapsackProblem/: kp.py
Problems/TravellingSalesmanProblem/: results.txt  tsp.py
docs/: index.md
docs/reference/: environment.md  logstrategy.md  plots.md  rko.md
docs/stylesheets/: extra.css
docs/tutorials/: knapsack.md  tsp.md
examples/KnapsackProblem/: Notebook_Test.ipynb  kp.py  results.txt
examples/TravellingSalesmanProblem/: results.txt  tsp.py
src/RKO/: Plots.py  RKO.py  __init__.py
src/rko/: LogStrategy.py  RKO.py
